--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,10 @@ padding-right:2%;
   font-family: 'MedievalSharp'
 }
 
+.navbar-toggler {
+  background-color: #ffbb33 !important ;
+}
+
 
 body {
   font-family: arial;
@@ -55,8 +59,6 @@ body {
   margin-left: 15px;
 }
 
-
-
 a, #logout, .username {
   font-size: 18px;
 }
@@ -66,12 +68,6 @@ a, #logout, .username {
   font-family: 'MedievalSharp'
   
   }
-
-
-
-
-
- 
 
 /* CHARACTER CREATOR  */
 
@@ -103,6 +99,12 @@ a, #logout, .username {
 #character-form {
 
 display: inline-block;
+}
+
+#welcome-screen-words{
+ margin-top: 150px;
+ max-width: 80%;
+ max-height:80;
 }
 
 /* profile page style */
